[add] se elimino la columna de validacion enlas tablas de bandeja de aprobacion

--- a/src/app/modulos/notas-credito/list-notas-credito-rci/list-notas-credito-rci.component.html
+++ b/src/app/modulos/notas-credito/list-notas-credito-rci/list-notas-credito-rci.component.html
@@ -24,7 +24,7 @@
               <th scope="" *ngIf="usuario.acreedor"> Cargar NC </th>
               <th scope="" *ngIf="usuario.aprobador"> Aprobación </th>
               <th scope="" *ngIf="usuario.aprobador"> Editar Nota de Crédito </th>
-              <th scope=""> Validación </th>
+              <!--  <th scope=""> Validación </th> -->
             </tr>
           </thead>
           <tbody>
@@ -72,11 +72,11 @@
                   (click)="editaNotaCredito(item)">
                   Editar </button>
               </td>
-              <td>
+              <!--  <td>
                 <button class="btn ml-2"> <i class="fas fa-file mr-1"></i>
                   validación
                 </button>
-              </td>
+              </td> -->
             </tr>
           </tbody>
         </table>
