--- a/src/app/modulos/facturas-proveedor/list-facturas-proveedor-mx/list-facturas-proveedor-mx.component.html
+++ b/src/app/modulos/facturas-proveedor/list-facturas-proveedor-mx/list-facturas-proveedor-mx.component.html
@@ -31,7 +31,7 @@
               <th scope="" class="align-middle">Detalles</th>
               <th scope="" *ngIf="usuario.acreedor"> Cargar NC </th>
               <th scope="" *ngIf="usuario.aprobador"> Aprobación </th>
-              <th scope=""> Validación </th>
+              <!-- <th scope=""> Validación </th> -->
             </tr>
           </thead>
           <tbody>
@@ -86,14 +86,14 @@
                   </button> -->
                 </ng-container>
               </td>
-              <td>
-                <!-- <button class="btn ml-2" (click)="reprocesar(item.documento_id)"> <i class="fas fa-file mr-1"></i>
+              <!-- <td>
+                <button class="btn ml-2" (click)="reprocesar(item.documento_id)"> <i class="fas fa-file mr-1"></i>
                                   validación
-                                </button> -->
+                                </button>
                 <button class="btn ml-2"> <i class="fas fa-file mr-1"></i>
                   validación
                 </button>
-              </td>
+              </td> -->
             </tr>
           </tbody>
         </table>
