--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
-@import url('https://fonts.googleapis.com/css?family=Montserrat');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
 
 body {
-    font-family: 'Montserrat', sans-serif !important ;
+    font-family: 'Open Sans', sans-serif !important ;
 }
 
 @media screen and (max-width: 2600px) {
