--- a/src/app/compartidos/conceptos-comprobacion/conceptos-comprobacion.component.html
+++ b/src/app/compartidos/conceptos-comprobacion/conceptos-comprobacion.component.html
@@ -1,8 +1,8 @@
 <div class="card">
-  <div class="card-body">
+  <div class="mt-5">
     <h5 class="card-subtitle"> Agregar Concepto </h5>
   </div>
-  <div class="card-body">
+  <div class="mt-3">
     <form [formGroup]="formularioConceptos">
       <div class="row">
         <div class="col-md-2">
@@ -47,41 +47,39 @@
 <div class="row">
   <div class="col-12">
     <div class="card">
-      <div class="card-body">
-        <div class="panel panel-inverse">
-          <div class="panel-heading">
-            <h6 class="panel-title">Conceptos</h6>
-          </div>
-          <div class="panel-body table-responsive">
-            <table id="lista_conceptos" class="table table-striped table-bordered table-hover table-fixed">
-              <caption></caption>
-              <thead>
-                <tr>
-                  <th scope="">Cantidad</th>
-                  <th scope="">Descripción</th>
-                  <th scope="">Unidad</th>
-                  <th scope="">Monto</th>
-                  <th scope="">Eliminar</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr class="gradeU" *ngFor="let item of lista_conceptos; let i = index "
-                  [ngClass]="{ 'text-danger': item.activo == '0' }">
-                  <td>{{ item.cantidad }}</td>
-                  <td>{{ item.concepto }}</td>
-                  <td>{{ item.unidad }}</td>
-                  <td>{{ item.monto | currency: '$'}}</td>
-                  <td class="text-center">
-                    <button class="btn btn-danger text-white" (click)="eliminarItem(i)"> <em class="fa fa-trash"
-                        aria-hidden="true"></em> </button>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
+      <div class="panel panel-inverse">
+        <div class="panel-heading">
+          <h6 class="panel-title">Conceptos</h6>
         </div>
-
+        <div class="panel-body table-responsive">
+          <table id="lista_conceptos" class="table table-striped table-bordered table-hover table-fixed">
+            <caption></caption>
+            <thead>
+              <tr>
+                <th scope="">Cantidad</th>
+                <th scope="">Descripción</th>
+                <th scope="">Unidad</th>
+                <th scope="">Monto</th>
+                <th scope="">Eliminar</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr class="gradeU" *ngFor="let item of lista_conceptos; let i = index "
+                [ngClass]="{ 'text-danger': item.activo == '0' }">
+                <td>{{ item.cantidad }}</td>
+                <td>{{ item.concepto }}</td>
+                <td>{{ item.unidad }}</td>
+                <td>{{ item.monto | currency: '$'}}</td>
+                <td class="text-center">
+                  <button class="btn btn-danger text-white" (click)="eliminarItem(i)"> <em class="fa fa-trash"
+                      aria-hidden="true"></em> </button>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
       </div>
+
     </div>
   </div>
 </div>
