--- a/src/app/compartidos/header-comprobacion/header-comprobacion.component.html
+++ b/src/app/compartidos/header-comprobacion/header-comprobacion.component.html
@@ -1,7 +1,8 @@
 <div class="card">
-  <div class="card-body">
+  <div class="mt-5">
+    <!-- card-body -->
     <h4 class="card-title">Detalles del comprobante</h4>
-    <div class="card-body">
+    <div class="mt-3">
       <form [formGroup]="formulario_header">
         <div class="row">
           <div class="col-md-4">
