--- a/src/app/modulos/notas-credito/notas-credito/notas-credito.component.html
+++ b/src/app/modulos/notas-credito/notas-credito/notas-credito.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<!-- <div class="row">
   <div class="col">
     <div class="switcher p-t-10">
       <input type="checkbox" id="nota_credito" class="ml-5" name="nota_credito"
@@ -6,112 +6,100 @@
       <label for="nota_credito" style="width: auto; margin-left: -15px;"> XML / Papel </label>
     </div>
   </div>
-</div>
+</div> -->
 
-<div class="col-sm-12 col-md-10 col-lg-8 mx-auto">
-  <div class="row">
-    <div class="col">
-      <div class="card border border-info" style="width: auto; height: 100%;">
-        <div class="card-body">
-          <div class="form-row">
-            <form [formGroup]="formulario_header" class="row">
-              <div class="form-group col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
-                <label for="unidad_responsable">Unidad Responsable <span class="requerido">*</span> </label>
-                <select2 #selectSucursal [data]="lista_contribuyentes" [options]="{placeholder: ''}"
-                  (valueChanged)="onContrbiuyenteSeleccionado($event)" name="unidad_responsable"
-                  id="unidad_responsable">
-                </select2>
-              </div>
-              <div class="form-group col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
-                <label for="sucursal">Sucursal <span class="requerido">*</span> </label>
-                <select2 [data]="lista_sucursales" [options]="{placeholder: ''}"
-                  (valueChanged)="onSucursalSeleccionado($event)" name="sucursal" id="sucursal">
-                </select2>
-              </div>
-              <div class="form-group col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
-                <label for="unidad_responsable">Correo Electrónico <span class="requerido">*</span> </label>
-                <input type="email" class="form-control" formControlName="correo" id="unidad_responsable"
-                  maxlength="50">
-              </div>
-              <div class="form-group col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
-                <label for="fecha_recepcion">Fecha Recepción <span class="requerido">*</span> </label>
-                <my-date-picker #fecha_recepcion name="fecha_recepcion" id="fecha_recepcion"
-                  [options]="disabledDataPcickerOptions"
-                  (dateChanged)="onFechaRecepcionSelected($event, 'fecha_recepcion')">
-                </my-date-picker>
-              </div>
-              <div class="form-group col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
-                <label for="fecha_pago">Fecha de Pago <span class="requerido">*</span> </label>
-                <my-date-picker name="fecha_pago" id="fecha_pago" placeholder="" [options]="globals.myDatePickerOptions"
-                  (dateChanged)="onFechaRecepcionSelected($event, 'fecha_pago')" required>
-                </my-date-picker>
-              </div>
+<div class="row mt-5">
+  <div class="col-md-12">
+    <div class="form-row">
+      <form [formGroup]="formulario_header" class="row">
+        <div class="form-group col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
+          <label for="unidad_responsable">Unidad Responsable <span class="requerido">*</span> </label>
+          <select2 #selectSucursal [data]="lista_contribuyentes" [options]="{placeholder: ''}"
+            (valueChanged)="onContrbiuyenteSeleccionado($event)" name="unidad_responsable" id="unidad_responsable">
+          </select2>
+        </div>
+        <div class="form-group col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
+          <label for="sucursal">Sucursal <span class="requerido">*</span> </label>
+          <select2 [data]="lista_sucursales" [options]="{placeholder: ''}"
+            (valueChanged)="onSucursalSeleccionado($event)" name="sucursal" id="sucursal">
+          </select2>
+        </div>
+        <div class="form-group col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
+          <label for="unidad_responsable">Correo Electrónico <span class="requerido">*</span> </label>
+          <input type="email" class="form-control" formControlName="correo" id="unidad_responsable" maxlength="50">
+        </div>
+        <div class="form-group col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
+          <label for="fecha_recepcion">Fecha Recepción <span class="requerido">*</span> </label>
+          <my-date-picker #fecha_recepcion name="fecha_recepcion" id="fecha_recepcion"
+            [options]="disabledDataPcickerOptions" (dateChanged)="onFechaRecepcionSelected($event, 'fecha_recepcion')">
+          </my-date-picker>
+        </div>
+        <div class="form-group col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
+          <label for="fecha_pago">Fecha de Pago <span class="requerido">*</span> </label>
+          <my-date-picker name="fecha_pago" id="fecha_pago" placeholder="" [options]="globals.myDatePickerOptions"
+            (dateChanged)="onFechaRecepcionSelected($event, 'fecha_pago')" required>
+          </my-date-picker>
+        </div>
 
-              <ng-container *ngIf="!documento_papel">
-                <div class="form-group col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
-                  <label>XML <span class="requerido">*</span> </label>
-                  <div class="input-group input-file" name="xml_nc">
-                    <span class="input-group-btn">
-                      <label class="btn btn-block btn-primary">Archivo
-                        <input #input for="archivo" accept=".xml, .XML" type="file" style="display: none;"
-                          (change)="cargarArchivo( input, input_txt, 'xml')">
-                      </label>
-                    </span>
-                    <input #input_txt type="text" disabled class="form-control" placeholder='' id="archivo"
-                      name="archivo" />
-                  </div>
-                </div>
-              </ng-container>
-
-              <div class="form-group col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
-                <label>PDF <span class="requerido">*</span> </label>
-                <div class="input-group input-file" name="xml_nc">
-                  <span class="input-group-btn">
-                    <label class="btn btn-block btn-primary">Archivo
-                      <input #input_pdf for="archivo" accept=".pdf,.PDF" type="file" style="display: none;"
-                        (change)="cargarArchivo( input_pdf, input_pdf_txt, 'pdf')">
-                    </label>
-                  </span>
-                  <input #input_pdf_txt type="text" disabled class="form-control" placeholder='' id="archivo"
-                    name="archivo" />
-                </div>
-              </div>
-            </form>
-            <div *ngIf="!documento_papel" class="form-row">
-              <button [disabled]="!formulario_header.valid" class="btn btn-primary ml-auto" (click)="cargarDocumento()">
-                cargar </button>
+        <ng-container *ngIf="!documento_papel">
+          <div class="form-group col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
+            <label>XML <span class="requerido">*</span> </label>
+            <div class="input-group input-file" name="xml_nc">
+              <span class="input-group-btn">
+                <label class="btn btn-block btn-primary">Archivo
+                  <input #input for="archivo" accept=".xml, .XML" type="file" style="display: none;"
+                    (change)="cargarArchivo( input, input_txt, 'xml')">
+                </label>
+              </span>
+              <input #input_txt type="text" disabled class="form-control" placeholder='' id="archivo" name="archivo" />
             </div>
           </div>
+        </ng-container>
+
+        <div class="form-group col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
+          <label>PDF <span class="requerido">*</span> </label>
+          <div class="input-group input-file" name="xml_nc">
+            <span class="input-group-btn">
+              <label class="btn btn-block btn-primary">Archivo
+                <input #input_pdf for="archivo" accept=".pdf,.PDF" type="file" style="display: none;"
+                  (change)="cargarArchivo( input_pdf, input_pdf_txt, 'pdf')">
+              </label>
+            </span>
+            <input #input_pdf_txt type="text" disabled class="form-control" placeholder='' id="archivo"
+              name="archivo" />
+          </div>
         </div>
+        <div class="switcher p-t-10">
+          <input type="checkbox" id="nota_credito" class="ml-5" name="nota_credito"
+            (click)="onTipoDocumentoChange($event.target.checked)">
+          <label for="nota_credito" style="width: auto; margin-left: -15px;"> XML / Papel </label>
+        </div>
+      </form>
+      <div *ngIf="!documento_papel" class="form-row">
+        <button [disabled]="!formulario_header.valid" class="btn btn-primary ml-auto" (click)="cargarDocumento()">
+          cargar </button>
       </div>
     </div>
   </div>
-
 </div>
 
 <ng-container *ngIf="formulario_header.valid && documento_papel && controlsHeader.pdf.value !== ''">
-  <div class="col-sm-12 col-md-10 col-lg-8 mx-auto mt-2">
-    <div class="row">
-      <div class="col ">
-        <div class="card border border-info" style="width: auto; height: 100%;">
-          <div class="card-body">
-            <div class="row">
-              <app-header-comprobacion [formulario_header]="formulario_papel" [monedas]="lista_monedas"
-                *ngIf="this.carga_documento.pdf !== null && this.carga_documento.pdf !== ''">
-              </app-header-comprobacion>
-              <app-conceptos-comprobacion [lista_conceptos]="lista_conceptos"
-                *ngIf="this.carga_documento.pdf !== null && this.carga_documento.pdf !== ''">
-              </app-conceptos-comprobacion>
-            </div>
-            <div class="form-row">
-              <button [disabled]=" !formulario_papel.valid || lista_conceptos.length == 0"
-                class="btn btn-primary ml-auto" (click)="cargarDocumentoExtranjero()">
-                cargar </button>
-            </div>
-          </div>
-        </div>
-      </div>
+
+  <div class="row">
+    <div class="col-md-12">
+      <app-header-comprobacion [formulario_header]="formulario_papel" [monedas]="lista_monedas"
+        *ngIf="this.carga_documento.pdf !== null && this.carga_documento.pdf !== ''">
+      </app-header-comprobacion>
+      <app-conceptos-comprobacion [lista_conceptos]="lista_conceptos"
+        *ngIf="this.carga_documento.pdf !== null && this.carga_documento.pdf !== ''">
+      </app-conceptos-comprobacion>
+    </div>
+    <div class="form-row">
+      <button [disabled]=" !formulario_papel.valid || lista_conceptos.length == 0" class="btn btn-primary ml-auto"
+        (click)="cargarDocumentoExtranjero()">
+        cargar </button>
     </div>
   </div>
+
 
 </ng-container>
