[add] width modal detalles nc

--- a/src/app/modulos/notas-credito/modal-detalle-notas-credito/modal-detalle-notas-credito.component.html
+++ b/src/app/modulos/notas-credito/modal-detalle-notas-credito/modal-detalle-notas-credito.component.html
@@ -46,8 +46,7 @@
         </div>
 
         <table id="tabla_documentos table-responsive"
-          class="row-border table-responsive hover table table-striped table-bordered table-hover table-fixed dataTables_scrollBody"
-          style="width:100%; max-width: 100%; ">
+          class="row-border hover table table-striped table-bordered table-hover table-fixed dataTables_scrollBody">
           <caption></caption>
           <thead>
             <tr>
