[add] elminacion de consolo log  ajuse de lista notas de credito

--- a/src/app/modulos/codigos-de-recepcion/list-codigo-mx/list-codigo-mx.component.css
+++ b/src/app/modulos/codigos-de-recepcion/list-codigo-mx/list-codigo-mx.component.css
@@ -21,3 +21,12 @@ td.dataTables_empty {
 .centrado {
   text-align: center !important;
 }
+.panel-body {
+  width: 100% !important;
+  max-width: 100% !important;
+}
+
+#tabla_proveedores {
+  width: 100% !important;
+  max-width: 100% !important;
+}
