--- a/src/app/modulos/codigos-de-recepcion/list-codigo-mx/list-codigo-mx.component.html
+++ b/src/app/modulos/codigos-de-recepcion/list-codigo-mx/list-codigo-mx.component.html
@@ -13,9 +13,8 @@
       </div>
       <div class="panel-body  table-responsive">
         <table id="tabla_proveedores" datatable [dtOptions]="dtOptions"
-          class="row-border hover table table-striped table-bordered table-hover table-fixed dataTables_scrollBody"
-          width="100%" style="max-width:
-              100%; ">
+          class="row-border hover table table-striped table-bordered table-hover table-fixed">
+          <!-- dataTables_scrollBody -->
           <thead>
             <tr>
               <th class="align-middle">Código de Recepción</th>
