--- a/src/app/modulos/codigos-de-recepcion/list-codigo-mx/list-codigo-mx.component.css
+++ b/src/app/modulos/codigos-de-recepcion/list-codigo-mx/list-codigo-mx.component.css
@@ -9,13 +9,14 @@
 /*
    src/styles.css (i.e. your global style)
 */
-.dataTables_empty {
+
+/* .dataTables_empty {
   display: none !important;
 }
 
 td.dataTables_empty {
   display: none !important;
-}
+} */
 
 
 .centrado {
