--- a/src/app/modulos/carga-documentos/detalle-oc-mx/detalle-oc-mx.component.html
+++ b/src/app/modulos/carga-documentos/detalle-oc-mx/detalle-oc-mx.component.html
@@ -42,9 +42,9 @@
       <div class="col-md-12">
         <br>
         <button id="abrir-detalle-oc" class="btn btn-sm btn-primary" (click)="abrirDetalleOC()">Detalle</button>
-        <button id="abrir-detalle-doc-rel" class="btn btn-sm btn-primary ml-2"
+        <!-- <button id="abrir-detalle-doc-rel" class="btn btn-sm btn-primary ml-2"
           (click)="abrirDocsRelacioandos()">Documentos
-          Relacionados</button>
+          Relacionados</button> -->
         <div class="float-right" *ngIf="orden_oc.ruta_pdf !== ''">
           DESCARGAR DOCUMENTOS:
           <a *ngIf="orden_oc.ruta_pdf !== ''" target="_blank" data-placement="top" title="Descargar PDF"
