--- a/src/app/paginas/dynamic-login/dynamic-login/dynamic-login.component.html
+++ b/src/app/paginas/dynamic-login/dynamic-login/dynamic-login.component.html
@@ -73,8 +73,8 @@
                   ¿Olvidaste tu contraseña?
                 </a>
               </div>
-              <label>{{Alerta}}</label>
-              <label>{{Alerta_rfc}}</label>
+              <label class="text-danger">{{Alerta}}</label>
+              <label class="text-danger">{{Alerta_rfc}}</label>
             </div>
             <hr />
             <p class="text-center text-grey-darker">
