--- a/src/app/modulos/notas-credito/notas-credito/notas-credito.component.html
+++ b/src/app/modulos/notas-credito/notas-credito/notas-credito.component.html
@@ -77,7 +77,7 @@
       </form>
       <div *ngIf="!documento_papel" class="form-row">
         <button [disabled]="!formulario_header.valid" class="btn btn-primary ml-auto" (click)="cargarDocumento()">
-          cargar </button>
+          Cargar </button>
       </div>
     </div>
   </div>
@@ -97,7 +97,7 @@
     <div class="form-row">
       <button [disabled]=" !formulario_papel.valid || lista_conceptos.length == 0" class="btn btn-primary ml-auto"
         (click)="cargarDocumentoExtranjero()">
-        cargar </button>
+        Cargar </button>
     </div>
   </div>
 
