--- a/src/app/modulos/codigos-de-recepcion/list-codigo-mx/list-codigo-mx.component.html
+++ b/src/app/modulos/codigos-de-recepcion/list-codigo-mx/list-codigo-mx.component.html
@@ -11,14 +11,14 @@
       <div class="panel-heading">
         <h4 class="panel-title">Lista - Códigos de Recepción</h4>
       </div>
-      <div class="panel-body  table-responsive">
+      <div class="panel-body table-responsive">
         <table id="tabla_proveedores" datatable [dtOptions]="dtOptions"
           class="row-border hover table table-striped table-bordered table-hover table-fixed">
           <!-- dataTables_scrollBody -->
           <thead>
             <tr>
               <th class="align-middle">Código de Recepción</th>
-              <th class="align-middle">Número Orden de Compra</th>
+              <th class="align-middle" width=" 70px !important">Número Orden de Compra</th>
               <th class="align-middle">Nota Entrega</th>
               <th class="align-middle">Contribuyente</th>
               <th class="align-middle">Sucursal</th>
