[add] ajuste de tabla de codigo de receccion y ajuste en los comentarios de factura y cuenta

--- a/src/app/modulos/codigos-de-recepcion/list-codigo-mx/list-codigo-mx.component.html
+++ b/src/app/modulos/codigos-de-recepcion/list-codigo-mx/list-codigo-mx.component.html
@@ -15,10 +15,10 @@
         <table id="tabla_proveedores" datatable [dtOptions]="dtOptions"
           class="row-border hover table table-striped table-bordered table-hover table-fixed">
           <!-- dataTables_scrollBody -->
-          <thead>
+          <!--    <thead>
             <tr>
               <th class="align-middle">Código de Recepción</th>
-              <th class="align-middle" width=" 70px !important">Número Orden de Compra</th>
+              <th class="align-middle">Número Orden de Compra</th>
               <th class="align-middle">Nota Entrega</th>
               <th class="align-middle">Contribuyente</th>
               <th class="align-middle">Sucursal</th>
@@ -29,10 +29,10 @@
               <th class="align-middle">Monto</th>
               <th class="align-middle">Estatus</th>
               <th class="align-middle">Detalles</th>
-              <!-- <th class="align-middle">PDF</th> -->
+              <th class="align-middle">PDF</th>
             </tr>
-          </thead>
-          <tbody *ngIf="lista_codigos?.length != 0">
+          </thead> -->
+          <!--    <tbody *ngIf="lista_codigos?.length != 0">
             <tr *ngFor="let codigo of lista_codigos">
               <td class="align-middle">{{ codigo.codigo_recepcion }}</td>
               <td class="align-middle">{{ codigo.numero_orden_compra }}</td>
@@ -48,17 +48,17 @@
               <td class="align-middle text-right"> <button class="btn btn-primary"
                   (click)="verDetalles($event, codigo.id)"> <i class="fas fa-file mr-1"></i> Ver
                 </button> </td>
-              <!-- <td class="align-middle"><a *ngIf="codigo.pdf && codigo.pdf !== ''" [href]="codigo.pdf" target="_blank">
+             <td class="align-middle"><a *ngIf="codigo.pdf && codigo.pdf !== ''" [href]="codigo.pdf" target="_blank">
                   <i class="fas fa-file-pdf"></i>
                 </a>
-              </td> -->
+              </td>
             </tr>
-          </tbody>
-          <tbody *ngIf="lista_codigos.length == 0">
+          </tbody> -->
+          <!--  <tbody *ngIf="lista_codigos.length == 0">
             <tr>
               <td colspan="12" class="no-data-available">No se encontro ningun registro </td>
             </tr>
-          <tbody>
+          <tbody> -->
         </table>
       </div>
       <!-- end panel-body -->
