[add] coreccion de vista  cambio y coreccion de palabras

--- a/src/app/modulos/facturas-proveedor/list-facturas-proveedor-mx/list-facturas-proveedor-mx.component.html
+++ b/src/app/modulos/facturas-proveedor/list-facturas-proveedor-mx/list-facturas-proveedor-mx.component.html
@@ -41,7 +41,7 @@
               <td> {{ item.empresa }} </td>
               <td> {{ item.hotel }} </td>
               <td> {{ item.usuario_acreedor }} </td>
-              <td> {{ item.descripcion }} </td>
+              <td> {{ item.ordenes_compra }} </td>
               <td> {{ item.folio_fiscal }} </td>
               <td>
                 <div>
