--- a/src/app/modulos/listar-cfdi/filtros-cfdi/filtros-cfdi.component.html
+++ b/src/app/modulos/listar-cfdi/filtros-cfdi/filtros-cfdi.component.html
@@ -38,6 +38,12 @@
             </select2>
           </div>
           <div class="col-md-3 col-lg-3">
+            <label class="label-control" for="documento">Tipo de Pago</label>
+            <select2 [data]="lista_tipo_pago" [options]="{placeholder: 'Seleccione una Tipo de Pago'}"
+              (valueChanged)="selectTipoPago($event)" name="documento" id="documento">
+            </select2>
+          </div>
+          <div class="col-md-3 col-lg-3">
             <label class="label-control" for="orden_compra">Orden de Compra</label>
             <input type="text" class="form-control" id="orden_compra" formControlName="orden_compra"
               [(ngModel)]="filtroConsulta.orden_compra" placeholder="Orden de Compra" name="orden_compra">
