--- a/src/app/modulos/facturas-proveedor/list-facturas-proveedor-mx/list-facturas-proveedor-mx.component.html
+++ b/src/app/modulos/facturas-proveedor/list-facturas-proveedor-mx/list-facturas-proveedor-mx.component.html
@@ -29,6 +29,7 @@
               <th scope="" class="align-middle">Tipo de Documento</th>
               <th scope="" class="align-middle">Detalles</th>
               <th scope="" *ngIf="usuario.acreedor"> Cargar NC </th>
+              <th scope="" class="align-middle"> Documentos </th>
               <th scope="" *ngIf="usuario.aprobador"> Aprobación </th>
               <!-- <th scope=""> Validación </th> -->
             </tr>
@@ -58,7 +59,8 @@
               <td> {{ item.fecha_creacion | date:'yyyy-MM-dd' }} </td>
               <td> {{ item.folio_sap }} </td>
               <td class="align-middle">
-                <button class="btn btn-primary" (click)="verDetalles($event.target, item.id)"> Ver </button>
+                <button class="btn btn-primary" (click)="verDetalles($event.target, item.id, item.documento_id)"> Ver
+                </button>
               </td>
               <td *ngIf="usuario.acreedor && item.folio_sap !== '' ">
                 <!-- <button class="btn btn-primary ml-2" (click)="cargarNC(item.id)"><i class="fas fa-file-upload"></i>
@@ -66,21 +68,24 @@
                 <button class="btn btn-primary ml-2"><i class="fas fa-file-upload"></i>
                 </button>
               </td>
+              <td>
+                <div style="white-space: nowrap">
+                  <a *ngIf="item.pdf !== '' " target="_blank" [href]="item.pdf" class="btn"> <i
+                      class="far fa-file-pdf"></i> </a>
+                  <a *ngIf="item.xml !== '' " target="_blank" [href]="item.xml" class="btn ml-2"> <i
+                      class="far fa-file-code"></i> </a>
+                  <button class="btn ml-2"><i class="fas fa-file mr-1"></i>Actualizar PDF </button>
+                </div>
+              </td>
               <td class="no-wraptext" *ngIf="usuario.aprobador">
                 <ng-container *ngIf="true">
                   <button #button_aprobar *ngIf="item.aprobacion == 1"
                     (click)="aprobar(button_aprobar, item.id, item.documento_id, item)" class="btn btn-info ml-2"><i
                       class="far fa-check-circle"></i>
                   </button>
-                  <!-- <button *ngIf="item.aprobacion == 1" class="btn btn-info ml-2">
-                    <i class="far fa-check-circle"></i>
-                  </button> -->
                   <button *ngIf="item.aprobacion == 1" class="btn btn-danger ml-2" (click)="rechazar(item.id)"> <i
                       class="fas fa-ban"></i>
                   </button>
-                  <!-- <button *ngIf="item.aprobacion == 1" class="btn btn-danger ml-2">
-                    <i class="fas fa-ban"></i>
-                  </button> -->
                 </ng-container>
               </td>
               <!-- <td>
@@ -102,7 +107,8 @@
 
 <app-modal-detalles-aprobacion *ngIf="lista_detalle_aprobacion" [detalleAprobacion]="lista_detalle_aprobacion">
 </app-modal-detalles-aprobacion>
-<app-modal-detalle-factura-proveedor *ngIf="detalle_factura_proveedor" [data]="detalle_factura_proveedor">
+<app-modal-detalle-factura-proveedor *ngIf="detalle_factura_proveedor" [data]="detalle_factura_proveedor"
+  [documentos_anexos]="documentos_anexos" [id_Doc]="id_Doc" [identificador_corporativo]="identificador_corporativo">
 </app-modal-detalle-factura-proveedor>
 
 <!-- <app-modal-detalles-amortizacion [data]="detalles" [detalleAprobacion]="lista_detalle_aprobacion">
