--- a/src/app/modulos/notas-credito/list-notas-credito-rci/list-notas-credito-rci.component.html
+++ b/src/app/modulos/notas-credito/list-notas-credito-rci/list-notas-credito-rci.component.html
@@ -22,6 +22,7 @@
               <th scope="" class="align-middle">Detalles</th>
               <th scope="" *ngIf="usuario.acreedor"> Cargar NC </th>
               <th scope="" *ngIf="usuario.aprobador"> Aprobación </th>
+              <th scope="" *ngIf="usuario.aprobador"> Documentos </th>
               <th scope="" *ngIf="usuario.aprobador"> Editar Nota de Crédito </th>
               <!--  <th scope=""> Validación </th> -->
             </tr>
@@ -47,7 +48,8 @@
               <!-- <td> {{ item.folio_sap }} </td> -->
               <td> {{ item.tipo_gasto }} </td>
               <td class="align-middle">
-                <button class="btn btn-primary" (click)="verDetalles($event.target, item.id)"> Ver </button>
+                <button class="btn btn-primary" (click)="verDetalles($event.target, item.id , item.documento_id)"> Ver
+                </button>
               </td>
               <td *ngIf="usuario.acreedor && item.folio_sap !== '' ">
                 <button class="btn btn-primary ml-2"><i class="fas fa-file-upload"></i>
@@ -63,9 +65,17 @@
                   </button>
                 </ng-container>
               </td>
+              <td>
+                <div style="white-space: nowrap">
+                  <a *ngIf="item.pdf !== '' " target="_blank" [href]="item.pdf" class="btn"> <i
+                      class="far fa-file-pdf"></i> </a>
+                  <a *ngIf="item.xml !== '' " target="_blank" [href]="item.xml" class="btn ml-2"> <i
+                      class="far fa-file-code"></i> </a>
+                  <button class="btn ml-2"><i class="fas fa-file mr-1"></i>Actualizar PDF </button>
+                </div>
+              </td>
               <td class="align-middle">
-                <button *ngIf="item.numero_nivel === item.numero_niveles_aprobacion" class="btn btn-primary"
-                  (click)="editaNotaCredito(item)">
+                <button *ngIf="(item.numero_nivel === 2)" class="btn btn-primary" (click)="editaNotaCredito(item)">
                   Editar </button>
               </td>
               <!--  <td>
@@ -80,8 +90,12 @@
     </div>
   </div>
 </div>
+
 <app-modal-detalles-aprobacion *ngIf="lista_detalle_aprobacion" [detalleAprobacion]="lista_detalle_aprobacion">
 </app-modal-detalles-aprobacion>
-<app-modal-detalle-notas-credito *ngIf="detalle_notas_credito" [data]="detalle_notas_credito">
+
+<app-modal-detalle-notas-credito *ngIf="detalle_notas_credito" [data]="detalle_notas_credito"
+  [documentos_anexos]="documentos_anexos" [id_Doc]="id_Doc" [identificador_corporativo]="identificador_corporativo">
 </app-modal-detalle-notas-credito>
+
 <app-modal-cuenta *ngIf="notaSeleccionada" [nota_credito]="notaSeleccionada"></app-modal-cuenta>
