--- a/src/app/modulos/listar-cfdi/filtros-cfdi/filtros-cfdi.component.html
+++ b/src/app/modulos/listar-cfdi/filtros-cfdi/filtros-cfdi.component.html
@@ -65,12 +65,12 @@
             <input type="text" class="form-control" [(ngModel)]="filtroConsulta.folio_fiscal" formControlName="folio"
               id="folio" placeholder="Folio Fiscal" name="folio">
           </div>
-          <!-- <div class="col-md-3 col-lg-3">
-            <label class="label-control" for="estatus_recepcion">Estatus SAP </label>
+          <div class="col-md-3 col-lg-3">
+            <label class="label-control" for="estatus_recepcion">Estatus Oracle </label>
             <select2 [data]="lista_estatus_sap" [options]="{placeholder: 'Seleccione Estatus'}"
               (valueChanged)="selectEstatusSAP($event)" name="estatus_recepcion" id="estatus_recepcion">
             </select2>
-          </div> -->
+          </div>
           <!-- <div class="col-md-3 col-lg-3">
             <label class="label-control" for="numero_oc">Número de Órden de Compra</label>
             <input type="text" class="form-control" id="numero_oc" formControlName="numero_OC"
