--- a/src/app/modulos/notas-credito/list-notas-credito-rci/list-notas-credito-rci.component.html
+++ b/src/app/modulos/notas-credito/list-notas-credito-rci/list-notas-credito-rci.component.html
@@ -21,9 +21,9 @@
               <th scope="" class="align-middle">Tipo de Gasto</th>
               <th scope="" class="align-middle">Detalles</th>
               <th scope="" *ngIf="usuario.acreedor"> Cargar NC </th>
-              <th scope="" *ngIf="usuario.aprobador"> Aprobación </th>
               <th scope="" *ngIf="usuario.aprobador"> Documentos </th>
-              <th scope="" *ngIf="usuario.aprobador"> Editar Nota de Crédito </th>
+              <th scope="" *ngIf="usuario.aprobador === 2"> Editar Nota de Crédito </th>
+              <th scope="" *ngIf="usuario.aprobador"> Aprobación </th>
               <!--  <th scope=""> Validación </th> -->
             </tr>
           </thead>
@@ -55,16 +55,6 @@
                 <button class="btn btn-primary ml-2"><i class="fas fa-file-upload"></i>
                 </button>
               </td>
-              <td class="no-wraptext" *ngIf="usuario.aprobador">
-                <ng-container *ngIf="item.aprobacion == 1">
-                  <button (click)="aprobar( item.id, item.documento_id)" class="btn btn-info ml-2">
-                    <i class="far fa-check-circle"></i>
-                  </button>
-                  <button (click)="rechazar( item.id, item.documento_id )" class="btn btn-danger ml-2">
-                    <i class="fas fa-ban"></i>
-                  </button>
-                </ng-container>
-              </td>
               <td>
                 <div style="white-space: nowrap">
                   <a *ngIf="item.pdf !== '' " target="_blank" [href]="item.pdf" class="btn"> <i
@@ -75,9 +65,19 @@
                       class="fas fa-file mr-1"></i>Actualizar PDF </button>
                 </div>
               </td>
-              <td class="align-middle">
-                <button *ngIf="(item.numero_nivel === 2)" class="btn btn-primary" (click)="editaNotaCredito(item)">
+              <td class="align-middle" *ngIf="(item.numero_nivel === 2)">
+                <button class="btn btn-primary" (click)="editaNotaCredito(item)">
                   Editar </button>
+              </td>
+              <td class="no-wraptext" *ngIf="usuario.aprobador">
+                <ng-container *ngIf="item.aprobacion == 1">
+                  <button (click)="aprobar( item.id, item.documento_id)" class="btn btn-info ml-2">
+                    <i class="far fa-check-circle"></i>
+                  </button>
+                  <button (click)="rechazar( item.id, item.documento_id )" class="btn btn-danger ml-2">
+                    <i class="fas fa-ban"></i>
+                  </button>
+                </ng-container>
               </td>
               <!--  <td>
                 <button class="btn ml-2"> <i class="fas fa-file mr-1"></i>
