--- a/src/app/modulos/orden-compra/filtro-orden-compra/filtro-orden-compra.component.html
+++ b/src/app/modulos/orden-compra/filtro-orden-compra/filtro-orden-compra.component.html
@@ -32,10 +32,10 @@
           </div>
 
           <div class="col-md-3 col-lg-3" *ngIf="(!datos_iniciales.usuario.proveedor)">
-            <label class="label-control" for="numero_proveedor">Número Proveedor</label>
-            <input type="text" class="form-control" id="numero_proveedor" placeholder="Número Proveedor"
-              name="numero_proveedor" onlyNumbers maxlength="10" [(ngModel)]="filtroConsulta.numero_proveedor"
-              formControlName="numero_proveedor">
+            <label class="label-control" for="nombre_proveedor">Nombre Proveedor</label>
+            <input type="text" class="form-control" id="nombre_proveedor" placeholder="Nombre Proveedor"
+              name="nombre_proveedor" maxlength="50" [(ngModel)]="filtroConsulta.nombre_proveedor"
+              formControlName="nombre_proveedor">
           </div>
           <!-- <div class="col-md-3 col-lg-3">
             <label class="label-control" for="codigo_compania">Código Compañía</label>
